<resources>
    <string name="app_name">NUCash</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="Send_Notes">Confirmed transactions will not be refunded. Please make sure that the ID Number and Amount are correct.</string>
    <string name="note1">Make sure that the entered amount is in numeric characters.</string>
    <string name="note2">For Enrollment Late Payments and Installment Late Payments, Php 200.00 penalty will be charged manually by the Treasury Office.</string>
    <string name="note3">During Enrollment Period: this payment option DOES NOT auto-enroll the student beneficiary. If you intend to auto-enroll, make sure you have registered subjects for the on-going enrollment term and assessment form has been thoroughly reviewed.</string>
    <string name="link1">www.national-u.edu.ph</string>
    <string name="link2">facebook.com/NationalUniversityPhilippines</string>
    <string name="link3">twitter.com/NationalUPhil</string>
    <string name="link4">instagram.com/NationalUPH</string>
    <string name="phone">Phone: (02) 8712-1900</string>
    <string name="faq1">I have a transaction concern. What do I do?</string>
    <string name="faq2">I lost my phone or SIM with the number registered to my NUCash Account. What do I do?</string>
    <string name="faq3">How can I pay my tuition fees in NUCash?</string>
    <string name="View_all">View All</string>
    <string name="brt1">Cashing In &amp; Out</string>
    <string name="brt2">Features &amp; Services</string>
    <string name="brt3">Safety &amp; Security</string>
    <string name="brt4">Promos &amp; Deals</string>
    <string name="attachment1">Upload your promissory letter and other necessary documents</string>
    <string name="attachment2">File limit: 3</string>
    <string name="attachment3">Single size limit: 15MB</string>
    <string name="attachment4">Allowed file types: Pdf or image file only.</string>
    <string name="notice">This payment option is disabled due to some validations and requirements not met by the student beneficiary. Read the system messages appearing in the page.</string>
    <string name="warning">No assessment form yet. Generate your Assessment Form first from your Online Enrollment module to check your matriculation fees.</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_cash_in">CashInActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>
