<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/background">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Personal Details"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:textSize="25sp"
            android:layout_marginBottom="20dp"
            android:padding="8dp"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/yellow"
            android:padding="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/profileImage"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ic_white_profile"
                        android:padding="10dp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">
                        <TextView
                            android:id="@+id/nameTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Dela Cruz, Juan Rizal"
                            android:textSize="22sp"
                            android:textStyle="bold"
                            android:textColor="@color/blue"
                            android:layout_marginBottom="5dp"/>

                        <TextView
                            android:id="@+id/programTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="BACHELOR OF SCIENCE IN INFORMATION TECHNOLOGY"
                            android:textSize="14sp"
                            android:textColor="@color/blue"
                            android:gravity="left"/>
                    </LinearLayout>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/blue"
                    android:layout_gravity="center"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_id"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="ID Number"
                        android:textColor="@color/blue"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:paddingStart="8dp" />

                    <TextView
                        android:id="@+id/idTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2023-121343"
                        android:textSize="13sp"
                        android:textColor="@color/blue"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/blue"
                    android:layout_gravity="center"/>

                <!-- Email Address Section -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_blue_mail"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Email Address"
                        android:textColor="@color/blue"
                        android:textSize="14sp"
                        android:paddingStart="8dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/emailTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="cruzjr@students.nu-laguna.edu.ph"
                        android:textColor="@color/blue"
                        android:textSize="13sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/blue"
                    android:layout_gravity="center"/>

                <!-- Department Section -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_dept"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Department"
                        android:textColor="@color/blue"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:paddingStart="8dp" />

                    <TextView
                        android:id="@+id/departmentTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="SCS DEGREE PROGRAM"
                        android:textColor="@color/blue"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/blue"
                    android:layout_gravity="center"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_blue_profile" />

                    <TextView
                        android:id="@+id/profileLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Profile"
                        android:textColor="@color/blue"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:paddingStart="8dp" />
                </LinearLayout>
            </LinearLayout>


        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/logoutCard"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/yellow">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:gravity="center">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_logout"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Logout"
                    android:textColor="@color/blue"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/nu_logo"
                android:layout_marginEnd="20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/link1"
                    android:textColor="@color/blue"
                    android:textSize="13sp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/link2"
                    android:textColor="@color/blue"
                    android:textSize="13sp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/link3"
                    android:textColor="@color/blue"
                    android:textSize="13sp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/link4"
                    android:textColor="@color/blue"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textColor="@color/blue"
                    android:textSize="13sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>

